--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
-p{
+body{
 	font-family: 'Noto Sans', sans-serif;
+    width:100%;
+    margin: 0;
 } 
 
+p{
+    margin: 5px;
+}
 #mytable{
-    width: 50%;
+    width: 100%;
     height: 100%;
     background: #B2E6FF;
     border: 1px solid white;
-    border-radius: 23px;
+    //border-radius: 23px;
+    padding: 5px;
 }
 
 #mapholder{
-    margin: 20px;
     position: relative;
     float:center;
 }
@@ -26,7 +31,6 @@ p{
     vertical-align: center;
     border: 1px solid black;
     transition: background .08s ease-in;
-    margin: 40px;
 
 }
 
